link checker config

--- a/openapi/petstore.yaml
+++ b/openapi/petstore.yaml
@@ -167,7 +167,7 @@ paths:
         '400':
           description: Invalid ID supplied
         '404':
-          description: Pet not found, we are sorry
+          description: Pet not found
       security:
         - api_key: []
     post:
