--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -46,7 +46,7 @@ footer:
         - label: Contact us
           page: contact.mdx
 linkChecker:
-  severity: warning
+  severity: error
   options:
     DirectoryPath: "public"
     IgnoreDirectoryMissingTrailingSlash: true
