test error severity 2

--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -45,3 +45,9 @@ footer:
           page: faq.md
         - label: Contact us
           page: contact.mdx
+linkChecker:
+  severity: error
+  options:
+    DirectoryPath: "public"
+    IgnoreDirectoryMissingTrailingSlash: true
+    IgnoreAltMissing: true
