demo test warning

--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -46,6 +46,4 @@ footer:
         - label: Contact us
           page: contact.mdx
 linkChecker:
-  severity: error
-  options:
-    EnforceHTTPS: true
+  severity: warning
