test: link-checker

--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -49,3 +49,6 @@ linkChecker:
   severity: error
   options:
     DirectoryPath: 'public'
+    IgnoreDirs:
+      - "developer-portal/images"
+      - "docs"
