test: ignore all dev-portal folder

--- a/siteConfig.yaml
+++ b/siteConfig.yaml
@@ -50,5 +50,4 @@ linkChecker:
   options:
     DirectoryPath: 'public'
     IgnoreDirs:
-      - "developer-portal/images"
-      - "docs"
+      - "developer-portal"
